--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,11 @@
+/* Centered Valentine's Content */
+.centered {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
 /* General Styles */
 body {
     margin: 0;
